--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
+    "@sanity/client": "^3.4.1",
     "graphql": "^16.6.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
